# splash-page

./: .gitlab-ci.yml  Dockerfile  LICENSE  README.md  start.sh
content/: home.md
splash-server/: .env  .gitignore  .rust-toolchain  Cargo.toml  README.md  Rocket.toml  afra_users.db  debug.js  debug.ts  denali-build.js  index.js  ormconfig.json  package.json  tsconfig.json
splash-server/app/: application.js  debug.ts
splash-server/app/actions/: application.ts
splash-server/app/actions/space-events/: create.ts  destroy.ts  list.ts  show.ts  update.ts
splash-server/app/entities/: space-event.ts
splash-server/app/models/: application.ts  space-event.ts
splash-server/app/orm-adapters/: application.ts  typeorm.ts
splash-server/app/parsers/: application.ts
splash-server/app/serializers/: space-event.ts
splash-server/config/: environment.ts  routes.ts
splash-server/config/initializers/: typeorm-connection.ts
splash-server/migrations/2018-02-12-204439_initial/: down.sql  up.sql
splash-server/src/: database.rs  lib.rs  main.rs  models.rs  oauth.rs  schema.rs  security.rs  utils.rs
splash-server/test/acceptance/: space-events-test.js
splash-server/test/unit/models/: space-event-test.js
splash-server/test/unit/serializers/: space-event-test.js
splash-server/typings/denali-typeorm/: index.d.ts
splash-web/: README.md  ember-cli-build.js  package.json
splash-web/app/: index.html  router.js
splash-web/app/application/: controller.js  route.js  styles.css  template.hbs
splash-web/config/: environment.js
splash-web/tests/: index.html
(+6 files in other folders)
