[package]
name = "splash-server"
description = "A better webseite for the AfrA"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]

[dependencies]

# Web stuff
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"

# Security
base64 = "0.9.0"
pwhash = "^0.1.2"
rand = "*"

# Database
diesel = { version = "1.1.0", features = ["sqlite"] }

# Environment and others
dotenv = "0.10"
structopt = "0.2"