[package]
name = "splash-server"
description = "A better webseite for the AfrA"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]

[dependencies]

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

# Web stuff
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"

# Security
base64 = "0.9.0"
pwhash = "^0.1.2"
rand = "*"

# Database
diesel = { version = "1.1.0", features = ["sqlite"] }
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"

# Environment and others
dotenv = "0.10"
structopt = "0.2"